--- a/site/views/top.ejs
+++ b/site/views/top.ejs
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8">
-    <title>マッサージ会社</title>
+    <head>
+        <meta charaset="UTF-8">
+        <title>マッサージ会社</title>
+    </head>
 </html>
