--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>マッサージ会社サイト</title>
+        <title>会員サイトログイン（マッサージ会社）</title>
     </head>
     <body>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
